name:                lushtags
version:             0.0.1
category:            Development
synopsis:            Create ctags compatible tags files for Haskell programs
license:             MIT
license-file:        LICENSE
author:              Bit Connor
maintainer:          bit@mutantlemon.com
cabal-version:       >=1.10
build-type:          Simple

source-repository head
  type:              git
  location:          git://github.com/bitc/lushtags.git

executable lushtags
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     Tags
  default-language:  Haskell98
  ghc-options:       -Wall
  build-depends:     base >= 4 && < 5,
                     vector == 0.9.*,
                     text == 0.11.*,
                     haskell-src-exts == 1.11.*
